--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,11 @@ uuid = "ae41b862-ecd2-457a-83f5-2d52b685fab8"
 authors = ["Andrew Ellis <andrewellis@pm.me> and contributors"]
 version = "0.1.0"
 
+[deps]
+CairoMakie = "13f3f980-e62b-5c42-98c6-ff1f3baf88f0"
+Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
+Turing = "fce5fe82-541a-59a6-adf8-730c64b5f9a0"
+
 [compat]
 julia = "1.6"
 
